--- a/feature/src/main/res/layout/activity_main.xml
+++ b/feature/src/main/res/layout/activity_main.xml
@@ -1,18 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.musta.simplyshare.feature.MainActivity">
+    android:orientation="vertical"
+    tools:context=".view.activity.MainActivity"
+    android:background="#1E88E5">
+    <FrameLayout
+        android:id="@+id/container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"/>
+    <android.widget.Toolbar
+        android:id="@+id/mainToolbar"
+        android:title="SimplyShare"
+        android:background="@color/colorPrimary"
+        android:titleTextColor="@android:color/white"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+    <ImageView
+        android:src="@drawable/simplyshare"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:layout_marginTop="50dp"
+        android:layout_gravity="center"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="vertical">
 
-</android.support.constraint.ConstraintLayout>
+        <Button
+            android:id="@+id/send_button"
+            android:layout_width="200dp"
+            android:layout_height="60dp"
+            android:layout_margin="30dp"
+            android:text="Send"
+            android:textSize="20dp"
+            android:background="@drawable/my_button_bg"
+            android:textColor="#FFFFFF"
+            android:onClick="sendButtonClick"
+            />
+
+        <Button
+            android:id="@+id/receive_button"
+            android:layout_width="200dp"
+            android:layout_height="60dp"
+            android:layout_margin="30dp"
+            android:text="Receive"
+            android:textSize="20dp"
+            android:background="@drawable/my_button_bg"
+            android:textColor="#FFFFFF"
+            android:onClick="receiveButtonClick"/>
+
+    </LinearLayout>
+
+</LinearLayout>
