Splash Screen and Main Activity and Select Files Implemented TODO: Send and Receive (Domain, Data and Presentation)

--- a/feature/src/main/res/layout/activity_main.xml
+++ b/feature/src/main/res/layout/activity_main.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context=".view.activity.MainActivity"
     android:background="#1E88E5">
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="gone"/>
-    <android.widget.Toolbar
+    <android.support.v7.widget.Toolbar
         android:id="@+id/mainToolbar"
         android:title="SimplyShare"
         android:background="@color/colorPrimary"
