--- a/feature/src/main/res/layout/activity_splash.xml
+++ b/feature/src/main/res/layout/activity_splash.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#0099cc"
+    android:background="#FFFFFF"
     tools:context="com.example.musta.simplyshare.feature.view.activity.SplashActivity">
 
     <!-- The primary full-screen view. This can be replaced with whatever view
@@ -47,7 +47,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="30dp"
                 android:textSize="30sp"
-                android:textColor="#FFFFFF"
+                android:textColor="#000000"
                 android:gravity="center"
                 android:text="@string/splash_string" />
 
