--- a/feature/src/main/res/layout/activity_select_files.xml
+++ b/feature/src/main/res/layout/activity_select_files.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -15,7 +16,6 @@
         android:background="@color/colorPrimary"
         android:titleTextColor="@android:color/white"
         android:layout_width="match_parent"
-
         android:layout_alignParentTop="true"
         android:layout_height="wrap_content"/>
 
@@ -23,6 +23,7 @@
         android:id="@+id/my_tab_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:tabTextColor="@android:color/white"
         android:layout_below="@+id/mainToolbar"/>
     <android.support.v4.view.ViewPager
         android:id="@+id/my_view_pager"
@@ -44,6 +45,7 @@
             android:layout_centerHorizontal="true"
             android:background="@drawable/my_button_bg"
             android:textColor="#FFFFFF"
+            android:onClick="send"
             android:layout_marginBottom="5dp"/>
     </RelativeLayout>
 
