--- a/feature/src/main/res/layout/device_hexagon_element.xml
+++ b/feature/src/main/res/layout/device_hexagon_element.xml
@@ -1,6 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.abed.hexagonrecyclerview.view.VerticallyAdaptableHexagonImageView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/img_view"
-    android:layout_width="10dp"
-    android:layout_height="10dp"
-    />
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_height="wrap_content"
+    android:layout_margin="10dp"
+    android:layout_width="wrap_content">
+    <ImageView
+        android:id="@+id/img_view"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        />
+    <TextView
+        android:id="@+id/deviceName"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginStart="20dp"
+        android:textColor="@android:color/white"
+        android:textSize="22sp"/>
+</LinearLayout>
