Wriiten the code establlishing connection and sending first connection mesage as well as written the code for FileTransferService

--- a/feature/src/main/res/layout/fragment_progress.xml
+++ b/feature/src/main/res/layout/fragment_progress.xml
@@ -1,13 +1,24 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#1E88E5"
     tools:context="com.example.musta.simplyshare.feature.view.fragment.ProgressFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/itemProgressList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_marginBottom="50dp" />
 
-</FrameLayout>
+    <Button
+        android:id="@+id/sendItems"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/my_button_bg"
+        android:text="Send" />
+
+</RelativeLayout>
