--- a/feature/src/main/res/drawable/background.xml
+++ b/feature/src/main/res/drawable/background.xml
@@ -11,7 +11,7 @@
 
     <!--<item android:width="25dp">-->
         <!--<ProgressBar-->
-            <!--android:id="@+id/pbHeaderProgress"-->
+    <!--andripd:idip@+id/pbHeaderProgress"-->
             <!--android:layout_width="wrap_content"-->
             <!--android:layout_height="wrap_content" >-->
         <!--</ProgressBar>-->
