--- a/feature/src/main/res/layout/card_main.xml
+++ b/feature/src/main/res/layout/card_main.xml
@@ -11,13 +11,32 @@
         android:layout_gravity="center_vertical"
         android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/card_image"
+        <RelativeLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="2"
-            android:src="@drawable/simplyshare" />
+            android:layout_weight="2">
+
+            <ImageView
+                android:id="@+id/card_image"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center_vertical"
+                android:src="@drawable/simplyshare" />
+
+            <TextView
+                android:id="@+id/videotime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentBottom="true"
+                android:background="@android:color/darker_gray"
+                android:textColor="@android:color/white"
+                android:text="00:00:00"
+                android:visibility="gone"
+                android:padding="4dp"
+                android:textSize="12sp" />
+        </RelativeLayout>
+
 
         <LinearLayout
             android:layout_width="0dp"
