--- a/feature/src/main/res/layout/fragment_send.xml
+++ b/feature/src/main/res/layout/fragment_send.xml
@@ -7,26 +7,40 @@
     android:background="#1E88E5"
     >
 
-
-
-    <TextView
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/rvItems"
-        android:text="Waiting for receivers..."
-        android:layout_centerHorizontal="true"
-        android:textAlignment="center"
-        android:textSize="25sp"
-        android:textColor="@android:color/white"/>
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/waitingText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Waiting for receivers "
+            android:layout_centerHorizontal="true"
+            android:textAlignment="center"
+            android:textSize="25sp"
+            android:textColor="@android:color/white" />
+
+        <com.wang.avi.AVLoadingIndicatorView
+            android:id="@+id/indicatorView"
+            android:layout_width="30dp"
+            android:layout_height="50dp"
+            android:layout_alignParentTop="true"
+            android:layout_toEndOf="@+id/waitingText"
+            app:indicatorName="BallPulseIndicator" />
+    </RelativeLayout>
+
 
     <!--<RelativeLayout
-        android:id="@+id/radarView"
+        andripd:idip@+id/radarView"
         android:layout_width="500dp"
         android:layout_height="500dp"
         android:layout_gravity="center"
         android:layout_centerInParent="true">
         <com.guo.duoduo.randomtextview.RandomTextView
-            android:id="@+id/random_textview"
+            andripd:idip@+id/random_textview"
             android:layout_width="400dp"
             android:layout_height="400dp"
             android:layout_centerInParent="true"/>
@@ -47,7 +61,7 @@
         android:layout_centerInParent="true" />
 
     <!--<com.example.musta.simplyshare.feature.view.fragment.RadarView-->
-        <!--android:id="@+id/radarView"-->
+    <!--andripd:idip@+id/radarView"-->
         <!--android:layout_width="500dp"-->
         <!--android:layout_height="500dp"-->
         <!--android:layout_gravity="center"-->
