--- a/feature/src/main/res/layout/item_progress_element.xml
+++ b/feature/src/main/res/layout/item_progress_element.xml
@@ -33,4 +33,22 @@
         android:layout_marginEnd="20dp"
         android:layout_marginStart="20dp" />
 
+    <TextView
+        android:id="@+id/itemShareSize"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/itemName"
+        android:layout_toEndOf="@+id/itemImage"
+        android:text="10mb"
+        android:textSize="12sp" />
+
+    <TextView
+        android:id="@+id/percentageItem"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/itemImage"
+        android:layout_alignParentEnd="true"
+        android:text="100%"
+        android:textSize="25sp" />
+
 </RelativeLayout>
